Changed extract_meth_sites_from_genome to return regions overlapping full patterns and updated examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Depends:
     SummarizedExperiment
 LazyData: true
 Imports: 
+    BSgenome,
     cowplot,
     data.table,
     doParallel,
@@ -31,4 +32,5 @@ Imports:
     rtracklayer,
     tidyr
 Suggests: 
-    BSgenome
+    BSgenome.Athaliana.TAIR.TAIR9,
+    BSgenome.Hsapiens.UCSC.hg38
