--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(calculate_smoothed_methodical_scores)
 export(create_random_regions)
 export(expand_granges)
 export(extract_granges_meth_site_values)
+export(extract_meth_sites_from_genome)
 export(find_tmrs)
 export(kallisto_index)
 export(kallisto_quantify)
@@ -21,6 +22,7 @@ export(plot_methodical_scores)
 export(plot_smoothed_methodical_scores)
 export(plot_tmrs)
 export(relative_ranges)
+export(sample_meth_sites)
 export(stranded_distance)
 export(sum_transcript_values_for_genes)
 export(summarize_region_methylation)
