--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(plot_meth_site_values)
 export(plot_methodical_scores)
 export(plot_smoothed_methodical_scores)
 export(plot_tmrs)
-export(relative_ranges)
+export(ranges_relative_to_tss)
 export(sample_meth_sites)
 export(stranded_distance)
 export(sum_transcript_values_for_genes)
