Added help page for package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,3 +25,6 @@ export(sample_meth_sites)
 export(stranded_distance)
 export(sum_transcript_values_for_genes)
 export(summarize_region_methylation)
+import(GenomicRanges)
+import(SummarizedExperiment)
+import(ggplot2)
