--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plot_methodical_scores)
 export(plot_smoothed_methodical_scores)
 export(plot_tmrs)
 export(ranges_relative_to_tss)
+export(rapid_cor_test)
 export(sample_meth_sites)
 export(stranded_distance)
 export(sum_transcript_values_for_genes)
