--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculate_meth_site_transcript_cors)
 export(calculate_region_methylation_transcript_cors)
 export(calculate_smoothed_methodical_scores)
 export(create_random_regions)
+export(download_meth_dataset)
 export(expand_granges)
 export(extract_granges_meth_site_values)
 export(extract_meth_sites_from_genome)
