Removed download_datasets and finished updating to use biocparallel

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Suggests:
     DESeq2,
     knitr,
     methrix,
-    rmarkdown
+    rmarkdown,
+    TumourMethData
 VignetteBuilder: knitr
 SystemRequirements: kallisto
