--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,6 +55,7 @@ Suggests:
     knitr,
     methrix,
     rmarkdown,
+    TCGAbiolinks,
     TumourMethData
 VignetteBuilder: knitr
 SystemRequirements: kallisto
