Finsihed Working with RangedSummarizedExperiments vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(SampleMethSites)
 export(adjust_covariates)
 export(annotateGRanges)
-export(annotateMethSitePlot)
+export(annotatePlot)
 export(calculateMethSiteTranscriptCors)
 export(calculateMethSiteTranscriptPartialCors)
 export(calculateRegionMethylationTranscriptCors)
@@ -19,8 +19,9 @@ export(makeMethRSEFromArrayFiles)
 export(makeMethRSEFromBedgraphs)
 export(maskRangesInRSE)
 export(methrixToRSE)
-export(plotMethSiteValues)
+export(plotMethSiteCorCoefs)
 export(plotMethodicalScores)
+export(plotMethylationValues)
 export(plotTMRs)
 export(rangesRelativeToTSS)
 export(rapidCorTest)
