--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,15 +11,15 @@ Description: DNA methylation is generally considered to be associated with trans
 	common framework, lifting over DNA methylation data between different genome builds and creating base-resolution plots of the association between DNA methylation and 
 	transcriptional activity at transcriptional start sites. 
 License: GPL (>= 3)
-BugReports: https://support.bioconductor.org/tag/methodical
-biocViews: DNAMethylation, Transcription, MethylationArray, Software
+BugReports: https://github.com/richardheery/methodical/issues
+biocViews: DNAMethylation, MethylationArray, Transcription, GenomeWideAssociation, Software
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Depends: 
     GenomicRanges,
     ggplot2,
-    R (>= 4.0),
+    R (>= 4.3.0),
     SummarizedExperiment
 LazyData: false
 Imports: 
@@ -58,3 +58,4 @@ Suggests:
     TumourMethData
 VignetteBuilder: knitr
 SystemRequirements: kallisto
+URL: https://github.com/richardheery/methodical
