--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(sampleMethSites)
 export(strandedDistance)
 export(sumTranscriptValuesForGenes)
 export(summarizeRegionMethylation)
+import(ExperimentHub)
 import(GenomicRanges)
+import(R.utils)
 import(SummarizedExperiment)
 import(ggplot2)
