--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculateMethSiteTranscriptCors)
 export(calculateRegionMethylationTranscriptCors)
 export(calculateSmoothedMethodicalScores)
 export(createRandomRegions)
+export(expand_granges)
 export(extractGRangesMethSiteValues)
 export(extractMethSitesFromGenome)
 export(findTMRs)
