--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(annotatePlot)
 export(calculateMethSiteTranscriptCors)
 export(calculateRegionMethylationTranscriptCors)
 export(calculateSmoothedMethodicalScores)
+export(correct_correlation_pvalues)
 export(createRandomRegions)
 export(expand_granges)
 export(extractGRangesMethSiteValues)
